Adding an asset referencing other objects adds it to scene but only adds data-blocks of referenced objects #89864

Closed
opened 2021-07-15 05:12:10 +02:00 by Crowe · 11 comments

System Information
Operating system: Windows-8.1 64 Bits
Graphics card: NVIDIA GeForce GTX 1060 6GB/PCIe/SSE2 4.5.0 NVIDIA 466.47

Blender Version
Broken: 3.0.0 Alpha, branch: master, commit date: 2021-07-09 23:23, hash: 62d9dabc7d
Worked: --

Short description of error

Parents
Marking an asset with a parent then adding it in a new file adds the asset and recreates object relationships correctly, but only adds the parent's data-block. It'll exist in the Orphan Data tab and manually dragging and dropping it into the scene will add it.

Modifiers
An alternative version of what seems to be the same bug happens with objects referenced in modifiers. If you mark as asset (A) something with a modifier referencing another object (B) then load it it'll recreate the modifier referencing object B just fine, add the object B data-block to the file but also fail to add it to the scene until you drag it to the viewport.

Exact steps for others to reproduce the error
Parents

  1. Add a curve to the scene.
  2. Make it parent of the default cube.
  3. Mark cube object as asset.
  4. Save the file into an asset library folder.
  5. Create a new file and navigate to the asset library.
  6. Drag and drop the cube.
    (to confirm parent data-block was added)
  7. Go to Orphan Data in the outliner.
  8. Drag and drop the curve into the viewport.
  9. Return to the View Layer tab.

Modifiers
2. Add a curve modifier to the default cube and select the curve.
3. (up to 9.) Repeat asset creation process and Orphan Data verification.

**System Information** Operating system: Windows-8.1 64 Bits Graphics card: NVIDIA GeForce GTX 1060 6GB/PCIe/SSE2 4.5.0 NVIDIA 466.47 **Blender Version** Broken: 3.0.0 Alpha, branch: master, commit date: 2021-07-09 23:23, hash: 62d9dabc7db4 Worked: -- **Short description of error** *Parents* Marking an asset with a parent then adding it in a new file adds the asset and recreates object relationships correctly, but only adds the parent's data-block. It'll exist in the Orphan Data tab and manually dragging and dropping it into the scene will add it. *Modifiers* An alternative version of what seems to be the same bug happens with objects referenced in modifiers. If you mark as asset (A) something with a modifier referencing another object (B) then load it it'll recreate the modifier referencing object B just fine, add the object B data-block to the file but also fail to add it to the scene until you drag it to the viewport. **Exact steps for others to reproduce the error** *Parents* 1. Add a curve to the scene. 2. Make it parent of the default cube. 3. Mark cube object as asset. 4. Save the file into an asset library folder. 5. Create a new file and navigate to the asset library. 6. Drag and drop the cube. *(to confirm parent data-block was added)* 7. Go to Orphan Data in the outliner. 8. Drag and drop the curve into the viewport. 9. Return to the View Layer tab. *Modifiers* 2. Add a curve modifier to the default cube and select the curve. 3. (up to 9.) Repeat asset creation process and Orphan Data verification.
Author

Added subscriber: @crowe

Added subscriber: @crowe
Crowe changed title from Adding an asset referencing other objects adds it, but only data-blocks of referenced objects to Adding an asset referencing other objects adds it to scene but only adds data-blocks of referenced objects 2021-07-16 03:03:40 +02:00
Member

Added subscribers: @JulianEisel, @mont29, @lichtwerk

Added subscribers: @JulianEisel, @mont29, @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm.

@mont29 , @JulianEisel : shouldnt this act the same as regular appending/linking?

Can confirm. @mont29 , @JulianEisel : shouldnt this act the same as regular appending/linking?
crissy1221 commented 2021-08-07 07:25:03 +02:00 (Migrated from localhost:3001)

Added subscriber: @crissy1221

Added subscriber: @crissy1221
crissy1221 commented 2021-08-07 07:25:03 +02:00 (Migrated from localhost:3001)

This comment was removed by @crissy1221

*This comment was removed by @crissy1221*
crissy1221 commented 2021-08-07 07:26:05 +02:00 (Migrated from localhost:3001)

This comment was removed by @crissy1221

*This comment was removed by @crissy1221*

@crissy1221 not sure what were those files, please stay on topics in reports next time.

@crissy1221 not sure what were those files, please stay on topics in reports next time.
Julian Eisel was assigned by Bastien Montagne 2021-09-29 11:38:21 +02:00

This issue is caused by drag and drop code for asset handling instantiation itself (instead of letting append code do it), by passing NULL scene pointer to WM_file_append_datablock.

@JulianEisel I will let you handle this one, but imho you should let append code also deal with instantiation here, this is not a trivial job...

This issue is caused by drag and drop code for asset handling instantiation itself (instead of letting append code do it), by passing `NULL` scene pointer to `WM_file_append_datablock`. @JulianEisel I will let you handle this one, but imho you should let append code also deal with instantiation here, this is not a trivial job...

This issue was referenced by df9120b365

This issue was referenced by df9120b365380cc1d64006e0d37a650eaaff9776

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 3.0 milestone 2023-02-08 15:59:06 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#89864
No description provided.